--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,7 +1,7 @@
----
+udia---
 layout: archive
-title: "Portfolio"
-permalink: /portfolio/
+title: "Estudiantes"
+permalink: /estudiantes/
 author_profile: true
 ---
 
