--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -9,12 +9,17 @@ author_profile: true
 
 <!-- New style rendering if publication categories are defined -->
 {% if site.portfolio_category %}
-  {% for category in portfolio_category  %}
+  {% for category in site.portfolio_category  %}
     {% assign title_shown = false %}
     {% for post in site.portfolio reversed %}
       {% if post.category != category[0] %}
         {% continue %}
       {% endif %}
+      {% unless title_shown %}
+        <h2>{{ category[1].title }}</h2><hr />
+        {% assign title_shown = true %}
+      {% endunless %}
+      {% include archive-single.html %}
     {% endfor %}
   {% endfor %}
 {% else %}
