--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,5 +1,5 @@
 ---
-title: "Estudiante 2"
+title: "Carlos Trinidad-Dominguez"
 collection: portfolio
 category: master
 excerpt: "Short description of portfolio item number 2<br/><img src='/images/500x300.png'>"
