--- a/_portfolio/CDTD.html
+++ b/_portfolio/CDTD.html
@@ -1,5 +1,5 @@
 ---
-title: "Carlos Trinidad-Dominguez"
+title: "Carlos Daniel Trinidad-Dominguez"
 collection: portfolio
 category: msc
 excerpt: "Short description of portfolio item number 2<br/><img src='/images/500x300.png'>"
