--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -19,11 +19,11 @@ author_profile: true
         <h2>{{ category[1].title }}</h2><hr />
         {% assign title_shown = true %}
       {% endunless %}
-      {% include archive-single.html %}
+      {% include archive-single_stud.html %}
     {% endfor %}
   {% endfor %}
 {% else %}
   {% for post in site.portfolio reversed %}
-    {% include archive-single.html %}
+    {% include archive-single_stud.html %}
   {% endfor %}
 {% endif %}
