--- a/_portfolio/DVLR.htm
+++ b/_portfolio/DVLR.htm
@@ -2,5 +2,7 @@
 title: "Daniel Valencia-Rodríguez"
 collection: portfolio
 category: phd
-excerpt: "Shortdescription of portfolio item number 1<br/><img src='/images/500x300.png'>"
+link: "https://www.researchgate.net/profile/Daniel-Valencia-Rodriguez"
+permalink: "https://labbioclim.github.io/https://www.researchgate.net/profile/Daniel-Valencia-Rodriguez"
+excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/500x300.png'><br/> Me interesan los patrones y procesos geográficos y ambientales en eventos de invasiones biológicas."
 ---
