Update and rename AGC.md to AGC.html

--- a/_portfolio/AGC.html
+++ b/_portfolio/AGC.html
@@ -2,6 +2,7 @@
 title: "Dra. Alejandra Galindo-Cruz"
 collection: portfolio
 category: gstud
-permalink: 'https://www.researchgate.net/profile/Alejandra-Galindo-Cruz'
+link: "https://www.researchgate.net/profile/Alejandra-Galindo-Cruz"
+permalink: "https://labbioclim.github.io/https://www.researchgate.net/profile/Alejandra-Galindo-Cruz"
 excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/500x300.png'><br/> Soy una joven investigadora apasionada por desentrañar las repercusiones del cambio global en la distribución de las especies, con especial interés en la conservación de especies y la ecología del paisaje."
 ---
