--- a/_portfolio/DVLR.html
+++ b/_portfolio/DVLR.html
@@ -4,5 +4,5 @@ collection: portfolio
 category: phd
 link: "https://www.researchgate.net/profile/Daniel-Valencia-Rodriguez"
 permalink: "https://labbioclim.github.io/https://www.researchgate.net/profile/Daniel-Valencia-Rodriguez"
-excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/500x300.png'><br/> Me interesan los patrones y procesos geográficos y ambientales en eventos de invasiones biológicas."
+excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/500x300.png'><br/> Soy biólogo de la Universidad de Antioquia, donde también obtuve mi maestría. Durante mis estudios de pregrado, trabajé en la ecología de comunidades de peces en el norte de los Andes. En mi maestría, investigué los patrones de distribución y estrategias para la conservación de sistemas acuáticos. Actualmente, como estudiante de doctorado en el INECOL, estoy interesado en comprender los patrones de distribución y riqueza de especies a gran escala mediante un enfoque biogeográfico y macroecológico, con un énfasis particular en los peces de agua dulce neotropicales."
 ---
