--- a/_portfolio/JSFR.html
+++ b/_portfolio/JSFR.html
@@ -4,7 +4,7 @@ collection: portfolio
 category: phd
 link: "https://www.researchgate.net/profile/Juan-Forero-Rodriguez"
 permalink: "https://labbioclim.github.io/https:/www.researchgate.net/profile/Juan-Forero-Rodriguez"
-excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/Sebas.png' style="width: 200px; float: left; margin-right: 10px;"><br/> Me interesa el efecto del clima en la ecología, la evolución y la distribución de la biodiversidad. Mi trabajo actual se centra en comprender cómo la dinámica ambiental determina los patrones espacio-temporales de la disminución global de los anfibios provocada por enfermedades emergentes."
+excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/Sebas.png' style='width: 200px; float: left; margin-right: 10px;'> Me interesa el efecto del clima en la ecología, la evolución y la distribución de la biodiversidad. Mi trabajo actual se centra en comprender cómo la dinámica ambiental determina los patrones espacio-temporales de la disminución global de los anfibios provocada por enfermedades emergentes."
 ---
 
 
