--- a/_portfolio/ARV.html
+++ b/_portfolio/ARV.html
@@ -4,5 +4,5 @@ collection: portfolio
 category: msc
 link: "https://www.researchgate.net/profile/Alejandro-Rodriguez-Villa"
 permalink: "https://labbioclim.github.io/https://www.researchgate.net/profile/Alejandro-Rodriguez-Villa"
-excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/500x300.png'><br/> Soy estudiante de maestría y estoy estudiando cómo influye el clima en el las interacciones de frugivoría de murciélagos filostómidos. Mis principales temas de interés son el nicho ecológico, las interacciones biológicas y la ecología geográfica."
+excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/alex.png' style='width: 200px; float: left; margin-right: 10px;'> Soy estudiante de maestría y estoy estudiando cómo influye el clima en el las interacciones de frugivoría de murciélagos filostómidos. Mis principales temas de interés son el nicho ecológico, las interacciones biológicas y la ecología geográfica."
 ---
