--- a/_portfolio/MDV.html
+++ b/_portfolio/MDV.html
@@ -4,5 +4,5 @@ collection: portfolio
 category: phd
 link: "https://www.researchgate.net/profile/Mauricio-Diaz-Vallejo-2"
 permalink: "https://labbioclim.github.io/https://www.researchgate.net/profile/Mauricio-Diaz-Vallejo-2"
-excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/500x300.png'><br/> Mi trabajo se ha enfocado en entender a diferentes escalas como la distribución de las especies se ve afectada por diversos factores antrópicos o de paisaje. Actualmente mi trabajo se centra en observar patrones ambientales de aves migratorias a lo largo de su distribución."
+excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/mauro.png' style='width: 200px; float: left; margin-right: 10px;'> Mi trabajo se ha enfocado en entender a diferentes escalas como la distribución de las especies se ve afectada por diversos factores antrópicos o de paisaje. Actualmente mi trabajo se centra en observar patrones ambientales de aves migratorias a lo largo de su distribución."
 ---
