--- a/_portfolio/CDTD.html
+++ b/_portfolio/CDTD.html
@@ -4,5 +4,5 @@ collection: portfolio
 category: msc
 link: "https://www.researchgate.net/profile/Carlos-Trinidad-Dominguez"
 permalink: "https://labbioclim.github.io/https://www.researchgate.net/profile/Carlos-Trinidad-Dominguez"
-excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/carlos.png'><br/> Me interesan los patrones y procesos geográficos y ambientales en eventos de invasiones biológicas."
+excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/carlos.png' style='width: 200px; float: left; margin-right: 10px;'> Me interesan los patrones y procesos geográficos y ambientales en eventos de invasiones biológicas."
 ---
