--- a/_portfolio/APP.html
+++ b/_portfolio/APP.html
@@ -4,5 +4,5 @@ collection: portfolio
 category: gstud
 link: "https://www.researchgate.net/profile/Alexander-Pena-Peniche"
 permalink: "https://labbioclim.github.io/https://www.researchgate.net/profile/Alexander-Pena-Peniche"
-excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/alexp.png'><br/> Estoy interesado en comprender cómo se distribuyen, interactúan y adaptan las especies a su entorno en diferentes escalas temporales y los efectos del cambio climático, utilizando enfoques de la ecología espacial, la modelización de nichos ecológicos y el análisis de hábitats y paisajes."
+excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/alexp.png' style='width: 200px; float: left; margin-right: 10px;'> Estoy interesado en comprender cómo se distribuyen, interactúan y adaptan las especies a su entorno en diferentes escalas temporales y los efectos del cambio climático, utilizando enfoques de la ecología espacial, la modelización de nichos ecológicos y el análisis de hábitats y paisajes."
 ---
