--- a/_portfolio/JDSR.html
+++ b/_portfolio/JDSR.html
@@ -4,5 +4,5 @@ collection: portfolio
 category: phd
 link: "https://www.researchgate.net/profile/Juan-Sanchez-Rodriguez-2"
 permalink: "https://labbioclim.github.io/https://www.researchgate.net/profile/Juan-Sanchez-Rodriguez-2"
-excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/juand.png' style='width: 200px; float: left; margin-right: 10px;'> Me interesan la ecología y la evolución de los insectos, principalmente las hormigas. Mi trabajo actual se centra en contribuir a la comprensión de la coevolución entre las hormigas y sus socios mutualistas, desde una perspectiva de sus nichos ecológicos y distribuciones potenciales."
+excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/juand.png' style='width: 200px; float: left; margin-right: 10px;'> Me interesa la ecología y la evolución de los insectos, principalmente de las hormigas. Mi trabajo actual se centra en contribuir al entendimiento de la coevolución entre las hormigas y sus plantas mutualistas, desde una perspectiva de sus nichos ecológicos y sus distribuciones potenciales."
 ---
