--- a/_portfolio/AGC.html
+++ b/_portfolio/AGC.html
@@ -4,5 +4,5 @@ collection: portfolio
 category: gstud
 link: "https://www.researchgate.net/profile/Alejandra-Galindo-Cruz"
 permalink: "https://labbioclim.github.io/https://www.researchgate.net/profile/Alejandra-Galindo-Cruz"
-excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/alega.png' style='width: 200px; float: left; margin-right: 10px;'> Soy una joven investigadora apasionada por desentrañar las repercusiones del cambio global en la distribución de las especies, con especial interés en la conservación de especies y la ecología del paisaje."
+excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/alega.png' style='width: 200px; float: left; margin-right: 10px;'> Soy una joven investigadora apasionada por desentrañar las repercusiones del cambio global en la distribución de las especies, con especial interés en la conservación de especies y la ecología del paisaje. asdjasdlkajsdljasdlkajsldjalsdkasd"
 ---
