--- a/_portfolio/MDV.html
+++ b/_portfolio/MDV.html
@@ -4,5 +4,5 @@ collection: portfolio
 category: phd
 link: "https://www.researchgate.net/profile/Mauricio-Diaz-Vallejo-2"
 permalink: "https://labbioclim.github.io/https://www.researchgate.net/profile/Mauricio-Diaz-Vallejo-2"
-excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/mauro.png' style='width: 200px; float: left; margin-right: 10px;'> Mi trabajo se ha enfocado en entender a diferentes escalas cómo la distribución de las especies de aves se ve afectada por diversos factores antrópicos o de paisaje. Además, me interesa entender y aportar al desarrollo metodológico de los modelos de nicho ecológico desde una perspectiva práctica. Actualmente mi trabajo se centra en observar patrones ambientales de aves migratorias americanas a lo largo de sus ciclos migratorios."
+excerpt: "<img src='https://labbioclim.github.io/bioclimat/images/mauro.png' style='width: 200px; float: left; margin-right: 10px;'> Mi trabajo se ha enfocado en entender a diferentes escalas cómo la distribución de las especies de aves se ve afectada por diversos factores antrópicos o de paisaje. Además, me interesa entender y aportar al desarrollo metodológico de los modelos de nicho ecológico desde una perspectiva práctica. Actualmente me centro en observar y explorar patrones ambientales de aves migratorias americanas a lo largo de sus ciclos migratorios."
 ---
