--- a/_portfolio/APP.html
+++ b/_portfolio/APP.html
@@ -1,7 +1,7 @@
 ---
 title: "Dr. Alexander Peña-Peniche"
 collection: portfolio
-category: gstud
+category: gstud_phd
 link: "https://www.researchgate.net/profile/Alexander-Pena-Peniche"
 permalink: "https://labbioclim.github.io/https://www.researchgate.net/profile/Alexander-Pena-Peniche"
 excerpt: ""
