--- a/_portfolio/JDSR.html
+++ b/_portfolio/JDSR.html
@@ -1,5 +1,5 @@
 ---
-title: "Juan D. Sánchez-Rodríguez"
+title: "Juan David Sánchez-Rodríguez"
 collection: portfolio
 category: phd
 link: "https://www.researchgate.net/profile/Juan-Sanchez-Rodriguez-2"
