--- a/_portfolio/gmsc_FATC.html
+++ b/_portfolio/gmsc_FATC.html
@@ -1,5 +1,5 @@
 ---
-title: "MSc. Felipe A. Toro-Cardona"
+title: "Phd(c). Felipe A. Toro-Cardona"
 collection: portfolio
 category: gstud_msc
 link: "https://www.researchgate.net/profile/Felipe-Toro-Cardona"
