--- a/_portfolio/gmsc_KRH.html
+++ b/_portfolio/gmsc_KRH.html
@@ -1,8 +1,8 @@
 ---
-title: "MSc. Karen Rojas-Herrera"
+title: "Dr. Claudio Mota-Vargas"
 collection: portfolio
-category: gstud_msc
-link: "https://www.researchgate.net/profile/Karen-Rojas-Herrera"
-permalink: "https://labbioclim.github.io/https://www.researchgate.net/profile/Karen-Rojas-Herrera"
+category: gstud_phd
+link: "https://www.researchgate.net/profile/Claudio-Mota-Vargas"
+permalink: "https://labbioclim.github.io/https://www.researchgate.net/profile/Claudio-Mota-Vargas"
 excerpt: ""
 ---
