--- a/_portfolio/gphd_MOA.html
+++ b/_portfolio/gphd_MOA.html
@@ -1,8 +1,14 @@
 ---
-title: "Dr. H. Mauricio Ortega-Andrade"
+title: ""
 collection: portfolio
 category: gstud_phd
 link: "https://www.researchgate.net/profile/H-Mauricio-Ortega-Andrade"
 permalink: "https://labbioclim.github.io/https://www.researchgate.net/profile/H-Mauricio-Ortega-Andrade"
-excerpt: ""
+excerpt: "H. Mauricio Ortega-Andrade
+Dr. David A. Prieto Torres
+Dr. Alexander Peña-Peniche
+Dra. Alejandra Galindo-Cruz
+Dra. Alondra Encarnación Luévano
+Dr. Claudio Mota-Vargas
+Maestría"
 ---
