--- a/_portfolio/gphd_MOA.html
+++ b/_portfolio/gphd_MOA.html
@@ -4,11 +4,5 @@ collection: portfolio
 category: gstud_phd
 link: "https://www.researchgate.net/profile/H-Mauricio-Ortega-Andrade"
 permalink: "https://labbioclim.github.io/https://www.researchgate.net/profile/H-Mauricio-Ortega-Andrade"
-excerpt: "H. Mauricio Ortega-Andrade
-Dr. David A. Prieto Torres
-Dr. Alexander Peña-Peniche
-Dra. Alejandra Galindo-Cruz
-Dra. Alondra Encarnación Luévano
-Dr. Claudio Mota-Vargas
-Maestría"
+excerpt: "H. Mauricio Ortega-Andrade<br>Dr. David A. Prieto Torres<br>Dr. Alexander Peña-Peniche<br>Dra. Alejandra Galindo-Cruz<br>Dra. Alondra Encarnación Luévano<br>Dr. Claudio Mota-Vargas"
 ---
