--- a/_portfolio/gphd.html
+++ b/_portfolio/gphd.html
@@ -4,7 +4,7 @@ collection: portfolio
 category: gstud_phd
 link: "https://www.researchgate.net/profile/H-Mauricio-Ortega-Andrade"
 permalink: "https://labbioclim.github.io/https://www.researchgate.net/profile/H-Mauricio-Ortega-Andrade"
-excerpt: "<a href="https://www.researchgate.net/profile/H-Mauricio-Ortega-Andrade" target="_blank">H. Mauricio Ortega-Andrade</a><br>
+excerpt: "
 H. Mauricio Ortega-Andrade<br>
 Dr. David A. Prieto Torres<br>
 Dr. Alexander Peña-Peniche<br>
